--- a/src/OPC.Core/OPC.Core.fsproj
+++ b/src/OPC.Core/OPC.Core.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Types.fs" />
     <Compile Include="LexicalModule.fs" />
   </ItemGroup>
 
